# AutoTests

./: CMakeLists.txt  README.md
catch2_build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  catch2.pc  cmake_install.cmake  install_manifest.txt
catch2_build/projects/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: catch2.md  googletest.md  memcheck.md  sanitizer.md
project_build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  testExecutable_include-b858cb2.cmake  testExecutable_tests-b858cb2.cmake
src/: CGraph.h
tests/: CGraph.cpp
